# functors

./: functors.cabal
Control/Functor/: Concurrent.hs
Data/Functor/: Algebra.hs  List.hs  NatTrans.hs
