name:          functors
category:      Control, Monads
version:       0.0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        John Wiegley <johnw@fpcomplete.com>
maintainer:    John Wiegley <johnw@fpcomplete.com>
stability:     provisional
homepage:      http://github.com/jwiegley/functors/
bug-reports:   http://github.com/jwiegley/functors/issues
copyright:     Copyright (C) 2013 John Wiegley
synopsis:      Prelude functions and type classes lifted over functors
description:
  Most things that can be done with types can be done with functors by lifting
  into the category of functors.

build-type:    Simple
extra-source-files:
  .gitignore

source-repository head
  type: git
  location: git://github.com/jwiegley/functors.git

library
  hs-source-dirs: .

  default-language:   Haskell2010
  default-extensions:
    RankNTypes
    ViewPatterns
    FlexibleInstances
    MultiParamTypeClasses

  build-depends:
    base >= 4       && < 5,
    free,
    transformers

  exposed-modules:
    Control.Functor.Concurrent
    Data.Functor.Algebra
    Data.Functor.NatTrans
    Data.Functor.List

  ghc-options: -Wall
